# shebang

./: Cargo.toml  README.md
src/: main.rs  render2.rs
src/renderer/: geometry.rs  helpers.rs  material.rs  mod.rs  texture.rs  uniform_structs.rs  vertex.rs
src/renderer/shaders/: colour.wgsl  texture.wgsl  vertex.wgsl
