[package]
name = "tess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
env_logger = "0.11.3"
float-derive = "0.1.0"
image = "0.25.1"
lyon = { version = "1.0.1", features = ["lyon_extra", "extra"] }
nalgebra = "0.32.6"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.20.0"
winit = "0.30.1"
